# PicoAdapterGB

./: .gitignore  .gitmodules  32bitsSample.sal  CMakeLists.txt  LICENSE  Mobile Adapter - Mobile Adapter Init.sal  README.md
PicoAdapter_PCB/: Readme.md
PicoAdapter_PCB/PicoAdapterGB_Pads/: 1-PCB_PCB_PicoAdapterGB.json  1-Schematic_PicoAdapterGB_Pads.json
concept/: GbSniffer_ESP32.ino
concept/esp_idf_SPI/sample_project/main/: main.c
concept/esp_idf_project/sample_project/: sdkconfig  sdkconfig.old
concept/esp_idf_project/sample_project/main/: main.c
concept/pico_test/: CMakeLists.txt  README.md  data_test.sal  pico_sdk_import.cmake
concept/pico_test/ESP32-Code/demo/: demo.ino
concept/pico_test/src/: esp_at.h  gbsniffer2.c  gbsniffer3.c  wifi8266_AT.c
dependences/: CMakeLists.txt
pico_esp8266_at/: CMakeLists.txt  README.md  gbsniffer.c  libmobile
pico_esp8266_at/src/: common.h  config_menu.c  config_menu.h  esp_at.c  esp_at.h  flash_eeprom.c  flash_eeprom.h  gblink.h  global.h  globals.h  libmobile_func.c  libmobile_func.h  libmobile_funcs.h  main.c  picow_socket.c  picow_socket.h
pico_esp8266_at/src/examples/: concept
pico_esp8266_at/src/pio/: linkcable.c
pico_esp8266_at_new/: CMakeLists.txt
pico_esp8266_at_new/src/: config_menu.c  config_menu.h  esp_at.c  esp_at.h  flash_eeprom.c  flash_eeprom.h  gblink.h  globals.h
pico_esp8266_at_new/src/pio/: linkcable.h
picow/: CMakeLists.txt  README.md  lwipopts.h
picow/src/: common.h  config_menu.c  config_menu.h  esp_at.h  flash_eeprom.c  flash_eeprom.h  gblink.c  gblink.h  globals.h  libmobile  libmobile_func.h  main.c  picow_socket.c  picow_socket.h  socket.c  socket.h  socket_impl.c  socket_impl.h  sync.c  sync.h
picow/src/pio/: linkcable.c  linkcable.h  linkcable.pio  linkcable_sm.pio
